--- a/index.html
+++ b/index.html
@@ -1,3 +1,64 @@
-<html>
-        <h1> Meu primeiro arquivo no meu repositorio</h1>
-<\html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modelos Fictícios</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <header>
+    <h1>Descubra Nossos Modelos Exclusivos</h1>
+  </header>
+
+  <section>
+    <div class="model-card">
+      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 1">
+      <div class="model-details">
+        <h2 class="model-name">Modelo A</h2>
+        <p class="model-description">Explore a elegância e estilo incomparável do Modelo A. Com características avançadas e design moderno, este modelo redefine o conceito de sofisticação.</p>
+      </div>
+    </div>
+
+    <div class="model-card">
+      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 2">
+      <div class="model-details">
+        <h2 class="model-name">Modelo B</h2>
+        <p class="model-description">Descubra a potência e inovação do Modelo B. Equipado com tecnologia de última geração, este modelo proporciona uma experiência única e emocionante.</p>
+      </div>
+    </div>
+
+    <div class="model-card">
+      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 3">
+      <div class="model-details">
+        <h2 class="model-name">Modelo C</h2>
+        <p class="model-description">Experimente o conforto e a versatilidade do Modelo C. Com um interior espaçoso e recursos inteligentes, este modelo se adapta às suas necessidades.</p>
+      </div>
+    </div>
+
+    <div class="model-card">
+      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 4">
+      <div class="model-details">
+        <h2 class="model-name">Modelo D</h2>
+        <p class="model-description">Explore a elegância e a eficiência do Modelo D. Com um design aerodinâmico e tecnologia eco-friendly, este modelo redefine a sustentabilidade no setor automotivo.</p>
+      </div>
+    </div>
+
+    <div class="model-card">
+      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 5">
+      <div class="model-details">
+        <h2 class="model-name">Modelo E</h2>
+        <p class="model-description">Descubra a aventura com o Modelo E. Projetado para explorar terrenos variados, este modelo é perfeito para quem busca emoções ao ar livre.</p>
+      </div>
+    </div>
+
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Modelos Incríveis. Todos os direitos reservados.</p>
+  </footer>
+
+</body>
+</html>
+
