--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section>
     <div class="model-card">
-      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 1">
+      <img class="model-image" src="modelo1.png" alt="Modelo 1">
       <div class="model-details">
         <h2 class="model-name">Modelo A</h2>
         <p class="model-description">Explore a elegância e estilo incomparável do Modelo A. Com características avançadas e design moderno, este modelo redefine o conceito de sofisticação.</p>
@@ -22,7 +22,7 @@
     </div>
 
     <div class="model-card">
-      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 2">
+      <img class="model-image" src="modelo2.png" alt="Modelo 2">
       <div class="model-details">
         <h2 class="model-name">Modelo B</h2>
         <p class="model-description">Descubra a potência e inovação do Modelo B. Equipado com tecnologia de última geração, este modelo proporciona uma experiência única e emocionante.</p>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="model-card">
-      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 3">
+      <img class="model-image" src="modelo3.png" alt="Modelo 3">
       <div class="model-details">
         <h2 class="model-name">Modelo C</h2>
         <p class="model-description">Experimente o conforto e a versatilidade do Modelo C. Com um interior espaçoso e recursos inteligentes, este modelo se adapta às suas necessidades.</p>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="model-card">
-      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 4">
+      <img class="model-image" src="modelo4.png" alt="Modelo 4">
       <div class="model-details">
         <h2 class="model-name">Modelo D</h2>
         <p class="model-description">Explore a elegância e a eficiência do Modelo D. Com um design aerodinâmico e tecnologia eco-friendly, este modelo redefine a sustentabilidade no setor automotivo.</p>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="model-card">
-      <img class="model-image" src="https://via.placeholder.com/300" alt="Modelo 5">
+      <img class="model-image" src="modelo5.png" alt="Modelo 5">
       <div class="model-details">
         <h2 class="model-name">Modelo E</h2>
         <p class="model-description">Descubra a aventura com o Modelo E. Projetado para explorar terrenos variados, este modelo é perfeito para quem busca emoções ao ar livre.</p>
