--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="model-card">
       <img class="model-image" src="modelo1.png" alt="Modelo 1">
       <div class="model-details">
-        <h2 class="model-name">Modelo A</h2>
+        <h2 class="model-name">Caren Zuqebertg</h2>
         <p class="model-description">Explore a elegância e estilo incomparável do Modelo A. Com características avançadas e design moderno, este modelo redefine o conceito de sofisticação.</p>
       </div>
     </div>
@@ -24,7 +24,7 @@
     <div class="model-card">
       <img class="model-image" src="modelo2.png" alt="Modelo 2">
       <div class="model-details">
-        <h2 class="model-name">Modelo B</h2>
+        <h2 class="model-name">Nataxa Wuilson</h2>
         <p class="model-description">Descubra a potência e inovação do Modelo B. Equipado com tecnologia de última geração, este modelo proporciona uma experiência única e emocionante.</p>
       </div>
     </div>
@@ -32,7 +32,7 @@
     <div class="model-card">
       <img class="model-image" src="modelo3.png" alt="Modelo 3">
       <div class="model-details">
-        <h2 class="model-name">Modelo C</h2>
+        <h2 class="model-name">Leticia Ramos</h2>
         <p class="model-description">Experimente o conforto e a versatilidade do Modelo C. Com um interior espaçoso e recursos inteligentes, este modelo se adapta às suas necessidades.</p>
       </div>
     </div>
@@ -40,7 +40,7 @@
     <div class="model-card">
       <img class="model-image" src="modelo4.png" alt="Modelo 4">
       <div class="model-details">
-        <h2 class="model-name">Modelo D</h2>
+        <h2 class="model-name">Liha Zuman</h2>
         <p class="model-description">Explore a elegância e a eficiência do Modelo D. Com um design aerodinâmico e tecnologia eco-friendly, este modelo redefine a sustentabilidade no setor automotivo.</p>
       </div>
     </div>
@@ -48,7 +48,7 @@
     <div class="model-card">
       <img class="model-image" src="modelo5.png" alt="Modelo 5">
       <div class="model-details">
-        <h2 class="model-name">Modelo E</h2>
+        <h2 class="model-name">Henri Golts</h2>
         <p class="model-description">Descubra a aventura com o Modelo E. Projetado para explorar terrenos variados, este modelo é perfeito para quem busca emoções ao ar livre.</p>
       </div>
     </div>
